<resources>
    <string name="app_name">Teaeracafe</string>
    <!--<string name="facebook_app_id">143419103015108</string>-->
    <string name="facebook_app_id">1154906181316462</string>
    // Loading
    <string name="load">Loading...</string>
    <string name="empty"></string>
    <string name="internet_error">You don\'t have a network right now. Please try connecting your device to the internet.</string>


    <string name="sign_up_button"><u>Sign Up</u></string>
    <string name="forgot_password_button"><u>Forgot Password</u></string>


    // SignIn Screen
    <string name="enter_email_space">Email contains space. Please enter again.</string>
    <string name="enter_pass_space">Password contains space. Please enter again.</string>

    // SignUp Screen
    <string name="enter_firstname">Please enter your first name.</string>
    <string name="enter_first_speical_characters">First name contains special characters.</string>
    <string name="enter_lastname">Please enter your last name.</string>
    <string name="enter_last_speical_characters">Last name contains special characters.</string>
    <string name="enter_email">Please enter your email.</string>
    <string name="enter_password">Please enter your password.</string>


    // Menu Screen
    <string name="pick_up_location">Pickup Location</string>
    <string name="cupertino">Cupertino, CA</string>
    <string name="sanjose">San Jose, CA</string>
    <string-array name="location_arrays">
        <item>Cupertino, CA</item>
        <item>San Jose, CA</item>
    </string-array>


    // Drop Menu
    <string name="menu_menu">Menu</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_order_receipt">Order Receipt</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_payment_method">Payment Method</string>

    // State
    <string name="order_state_received">ORDER RECEIVED</string>
    <string name="order_state_progress">IN PROGRESS</string>
    <string name="order_state_ready">READY FOR PICK-UP</string>
    <string name="order_state_complete">COMPLETE</string>

    // Order Recipt
    <string name="subtotal">Subtotal</string>
    <string name="rewards_credit">Rewards Credit</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="success_order">Placed Order Successfully.</string>
    <string name="empty_order">There is no order items. Please add items.</string>
    <string name="success_refund_order">Orders refunded Successfully.</string>


    // Cart
    <string name="add_more">Add more Items</string>
    <string name="redeem_free_drink">Redeem Free Drink</string>
    <string name="redeem_error">You don\'t have enough reward stars for free redeem drink.</string>
    <string name="no_item_error">There is no item added to this store location.</string>

    // Rewards
    <string name="rewards">Your Rewards</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="reload_balance">Reload Balance</string>
    <string name="two_rewards">*2 Rewards stars</string>
    <string name="four_rewards">*4 Rewards stars</string>
    <string name="redeem_now">Redeem Now</string>

    // Profile
    <string name="enter_name">Please enter your first and last name.</string>
    <string name="enter_speical_characters">User name contains special characters.</string>

    // Update Password
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_old_pass">Please enter your current password.</string>
    <string name="enter_new_pass">Please enter new password.</string>
    <string name="enter_confirm_pass">Please enter confirm password.</string>
    <string name="confirm_pass_error">Confirm password is different. Please enter again.</string>

    // Refund Confirm
    <string name="request_refund">Request Refund</string>
</resources>
