<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teaera.teaeracafe.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/dropMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/menuTextView"
            android:layout_alignBottom="@+id/menuTextView"
            android:layout_alignEnd="@+id/menuArrowImageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/menuArrowImageView"
            android:background="@android:color/transparent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <ImageView
            android:id="@+id/menuArrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/menuTextView"
            android:layout_toRightOf="@+id/menuTextView"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_arrow"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/menuTextView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/menu_menu"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:typeface="monospace"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"

            android:background="@android:color/transparent"
            android:visibility="visible"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/cartImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/circle"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/cartImageView"
                android:layout_toStartOf="@+id/cartImageView"
                android:scaleType="fitCenter"
                android:src="@drawable/backet"
                android:visibility="visible" />

            <TextView
                android:id="@+id/cartTextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/imageView20"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/imageView20"
                android:layout_toRightOf="@+id/imageView20"
                android:gravity="center"
                android:text="2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="10dp"
                android:typeface="normal"
                android:visibility="visible" />

            <Button
                android:id="@+id/cartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView20"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/imageView20"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent" />
        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/menuRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/photoImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:src="@drawable/user_photo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photoImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@android:color/transparent"
            android:text="@string/menu_menu"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/notificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/menuButton"
            android:background="@android:color/transparent"
            android:text="@string/menu_notification"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/rewardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/notificationButton"
            android:background="@android:color/transparent"
            android:text="@string/menu_rewards"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rewardButton"
            android:background="@android:color/transparent"
            android:text="@string/menu_profile"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profileButton"
            android:background="@android:color/transparent"
            android:text="@string/menu_help"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:text="@string/menu_logout"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:typeface="monospace" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
