<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teaera.teaeracafe.activities.RefundConfirmActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/menuTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/request_refund"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:typeface="monospace"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/relativeLayout2"
            android:background="@color/light_gray_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView1">

            <ListView
                android:id="@+id/itemListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/white" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/menu_rewards"
                        android:textColor="@color/yellow_highlight"
                        android:textSize="16dp"
                        android:typeface="monospace" />

                    <ImageView
                        android:id="@+id/imageView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/stat_icon" />

                    <TextView
                        android:id="@+id/rewardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView42"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/imageView42"
                        android:layout_toStartOf="@+id/imageView42"
                        android:text="+1"
                        android:textSize="14dp"
                        android:typeface="monospace" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView43"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:srcCompat="@color/light_gray_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/select_color"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/subtotal"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />

                        <TextView
                            android:id="@+id/subtotalTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="$8.00"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/rewards_credit"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />

                        <TextView
                            android:id="@+id/creditTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="-$3.50"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/tax"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />

                        <TextView
                            android:id="@+id/taxTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="$0.45"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:id="@+id/textView26"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/total"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />

                        <TextView
                            android:id="@+id/totalTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="$5.95"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:typeface="monospace" />
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/refundButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:background="@android:color/black"
                    android:text="Refund Request"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:typeface="monospace" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
